Refactor EntityValidationTest to use getFirst() for field access and add documentation for Result record in SpringVisitor